--- a/src/main/resources/public/index.html
+++ b/src/main/resources/public/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <title>Damn</title>
-  <base href="https://ico.iate.inra.fr/damn/">
+  <base href="https://icotest.iate.inra.fr/damn/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <link href="https://fonts.googleapis.com/css?family=Fira+Sans" rel="stylesheet">
@@ -12,5 +12,5 @@
 <link rel="stylesheet" href="styles.d0316a6e1285ffed60fd.css"></head>
 <body>
   <app-root></app-root>
-<script type="text/javascript" src="runtime.a5dd35324ddfd942bef1.js"></script><script type="text/javascript" src="es2015-polyfills.67c5cff8371af1f9a1d4.js" nomodule></script><script type="text/javascript" src="polyfills.407a467dedb63cfdd103.js"></script><script type="text/javascript" src="main.4dd3fcef46e6c8085c17.js"></script></body>
+<script type="text/javascript" src="runtime.a5dd35324ddfd942bef1.js"></script><script type="text/javascript" src="es2015-polyfills.67c5cff8371af1f9a1d4.js" nomodule></script><script type="text/javascript" src="polyfills.407a467dedb63cfdd103.js"></script><script type="text/javascript" src="main.f53689ae00870d27c1ae.js"></script></body>
 </html>
